--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 body{
-background-image: url(./images/backchuras.jpg);
+background-image: url(https://img.freepik.com/fotos-gratis/bife-do-lombo-grelhado-no-cutelo-o-meio-de-cozimento-fundo-preto_89816-14913.jpg?size=626&ext=jpg);
 
 
 
