Parametros de quantidades alterados

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 body{
-background-image: url(https://img.freepik.com/fotos-gratis/bife-do-lombo-grelhado-no-cutelo-o-meio-de-cozimento-fundo-preto_89816-14913.jpg?size=626&ext=jpg);
+background-image: url(https://cdn.pixabay.com/photo/2016/03/05/20/07/abstract-1238657_960_720.jpg);
 
 
 
@@ -87,7 +87,7 @@ p{
         /* margin-top: 80px; */
         padding:15px;
         text-align: center;
-        width: 80%%;
+        width: 80%;
         margin: auto;
         margin-top: 20px;
     
